--- a/TODO
+++ b/TODO
@@ -3,11 +3,10 @@
 * Комментарии (интересно, а их тут вообще можно запилить?). Не древовидные. Хз как, значит - курить маны. И да, не забыть про форму отпраки с автоматической вставкой хтмл тегов.
 * Надо как то ограничить число статей на главную страницу. И автоматизировать это дело. ? Курить маны!
 * Прямая ссылка на статью мелким шрифтом внизу.
-* Share (vk, facebook, twitter, lj).
 З.Ы. можно посмотреть, как нормальные люди это делают.
 
 Для проектов:
-* запилить домашние страницы для тех проектов, которые должны их иметь.
+* запилить домашние страницы для тех проектов, которые должны их иметь (осталось только moldyn).
 * И НЕ ПОЛЕНИТЬСЯ ОПИСАТЬ АРХИТЕКТУРУ для тех мест, где это нужно.
 
 Суммарно:
