--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 Для блога:
 * Облако тегов. Думаю, можно сделать топорно через grep каталога, но лучше бы по человечески. А значит - курить маны.
-* Комментарии (интересно, а их тут вообще можно запилить?). Не древовидные. Хз как, значит - курить маны. И да, не забыть про форму отпраки с автоматической вставкой хтмл тегов.
 * Надо как то ограничить число статей на главную страницу. И автоматизировать это дело. ? Курить маны!
 З.Ы. можно посмотреть, как нормальные люди это делают.
 
@@ -10,5 +9,5 @@
 
 Суммарно:
 * баг фиксы (если найду).
-* разобраться со стилями, сменить шрифт на более читаемый Serif, например.
 * запилить русские страницы (вместе с автоматическим редиректом). Хотя бы для основных.
+* about
