--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Для блога:
+* тэги переделать, сделать related
 
 Для проектов:
 * запилить домашние страницы для тех проектов, которые должны их иметь (осталось только moldyn).
@@ -7,3 +8,4 @@
 Суммарно:
 * баг фиксы (если найду).
 * запилить русские страницы (вместе с автоматическим редиректом). Хотя бы для основных.
+* css подкрутить
