fixed comment list

--- a/TODO
+++ b/TODO
@@ -6,5 +6,4 @@
 
 Суммарно:
 * баг фиксы (если найду).
-* запилить русские страницы (вместе с автоматическим редиректом). Хотя бы для основных.
-* css подкрутить
+* friends
