change project structure to more pretty one

--- a/projects/_posts/2013-02-12-git-etc.md
+++ b/projects/_posts/2013-02-12-git-etc.md
@@ -1,4 +1,5 @@
 ---
+permalink: projects/git-etc
 hastr: true
 layout: project
 title: git-etc
@@ -13,9 +14,10 @@ links:
     - Archlinux <a href="//aur.archlinux.org/packages/git-etc", title="AUR">AUR package</a>
 ---
 <!-- info block -->
-## <a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information
 
 Simple daemon that automatically creates git repository in the given directory and creates commit at the specified time interval.
+
+<!--more-->
 
 ```bash
 $ git-etc --help
