--- a/projects/_posts/2013-12-20-queued.md
+++ b/projects/_posts/2013-12-20-queued.md
@@ -1,4 +1,5 @@
 ---
+permalink: projects/queued
 hastr: true
 layout: project
 title: queued
@@ -12,9 +13,10 @@ license: GPLv3
 links:
 ---
 <!-- info block -->
-## <a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Information
 
 Daemon for starting jobs to queue of calculations. It was written as proof-of-concept.
+
+<!--more-->
 
 ```bash
 $ queued --help
