--- a/ru/projects/_posts/2013-02-12-git-etc.md
+++ b/ru/projects/_posts/2013-02-12-git-etc.md
@@ -1,4 +1,5 @@
 ---
+permalink: ru/projects/git-etc
 category: ru
 hastr: true
 layout: project
@@ -14,9 +15,10 @@ links:
     - Пакет в <a href="//aur.archlinux.org/packages/git-etc" title="AUR">AUR</a>
 ---
 <!-- info block -->
-## <a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Информация
 
 Простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени.
+
+<!--more-->
 
 ```bash
 $ git-etc --help
