--- a/ru/projects/_posts/2013-12-20-queued.md
+++ b/ru/projects/_posts/2013-12-20-queued.md
@@ -1,4 +1,5 @@
 ---
+permalink: ru/projects/queued
 category: ru
 hastr: true
 layout: project
@@ -13,9 +14,10 @@ license: GPLv3
 links:
 ---
 <!-- info block -->
-## <a href="#info" class="anchor" id="info"><span class="octicon octicon-link"></span></a>Информация
 
 Демон для запуска задач в очередь вычислений. Был создан, как proof-of-concept.
+
+<!--more-->
 
 ```bash
 $ queued --help
